# senseless_soccer3

./: .gitignore  .vimrc  CMakeLists.txt  data.cpp  entity.hpp  window.hpp
SoySoccer/: CMakeLists.txt
SoySoccer/src/: Animation.cpp  Animation.hpp  Ball.cpp  Ball.hpp  Controllable.cpp  Controllable.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  Folder.cpp  Folder.hpp  ImGuiHud.cpp  ImGuiHud.hpp  Interact.cpp  Interact.hpp  Math.hpp  Metrics.cpp  Metrics.hpp  Movable.cpp  Movable.hpp  Renderable.hpp  Simulate.cpp  Simulate.hpp  Sprite.cpp  Sprite.hpp  SpriteAnimation.cpp  SpriteAnimation.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Texture.cpp  Texture.hpp  Vector.cpp  Vector.hpp  Visualize.cpp  Visualize.hpp  Window.cpp  Window.hpp  input.hpp  main.cpp  (+1 more)
SoySoccer/src/imgui/: imgui-SFML.cpp
Team/: Team.hpp
gfx/: .directory  ball.xcf  ball_new.png.highlight  playerandball.xcf
src/: .ball.cpp.swp  .camera.cpp.swp  .clang-format  .data.cpp.swp  .gamepad.cpp.swp  .input.cpp.swp  .input.hpp.swp  .main.cpp.swp  .physics.cpp.swp  .pitch.cpp.swp  .player.cpp.swp  Utils.hpp  animation.cpp  animation.hpp  arcshape.cpp  arcshape.hpp  ball.cpp  ball.hpp  ball_animations.cpp  ball_animations.hpp  brain.cpp  brain.hpp  camera.cpp  camera.hpp  compass.cpp  compass.hpp  data.cpp  data.hpp  debug.cpp  debug.hpp  dirent.h  doom_fire.hpp  entity.cpp  entity.hpp  files.cpp  files.hpp  framerate.cpp  framerate.hpp  game.cpp  game.hpp  (+31 more)
src/Ball/: Ball.cpp  Ball.hpp  BallFactory.cpp  BallFactory.hpp  BallSprite.cpp  BallSprite.hpp
src/Brain/: .DribblePattern.hpp.swp  Brain.cpp  Brain.hpp  BrainCover.cpp  BrainCover.hpp  BrainDribble.cpp  BrainDribble.cpp.autosave  BrainDribble.hpp  BrainIdle.cpp  BrainIdle.h  BrainPass.cpp  BrainPass.hpp  BrainRetrieve.cpp  BrainRetrieve.hpp  BrainState.cpp  BrainState.hpp  BrainSupport.cpp  BrainSupport.hpp  BrainWait.cpp  BrainWait.hpp  DribblePattern.hpp
src/Controls/: Joysticker.cpp  Joysticker.hpp
src/Engine/: .Files.cpp.swp  .GameEngine.cpp.swp  .Sprite.cpp.swp  ArcShape.cpp  ArcShape.hpp  BaseFactory.cpp  BaseFactory.hpp  Camera.cpp  Camera.hpp  Collider.cpp  Collider.hpp  Compass.cpp  Compass.hpp  Controllable.cpp  Controllable.hpp  CoordinateSystem.cpp  CoordinateSystem.h  Debug.cpp  Debug.hpp  Drawable.cpp  Drawable.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  EntityFactory.cpp  EntityFactory.h  Files.cpp  Files.hpp  Folder.cpp  Folder.hpp  GameEngine.cpp  GameEngine.hpp  Gamepad.cpp  Gamepad.cpp.autosave  Gamepad.hpp  InputDevice.cpp  InputDevice.hpp  Keyboard.cpp  Keyboard.hpp  (+31 more)
src/Game/: Game.cpp  Game.hpp  Message.cpp  Message.h  Object.cpp  Object.h  ObjectPool.cpp  ObjectPool.h
src/Locomotion/: Head.cpp  Head.hpp  Locomotion.cpp  Locomotion.hpp  LocomotionManager.cpp  LocomotionManager.hpp  Pursue.cpp  Pursue.hpp  Seek.cpp  Seek.hpp  Stand.cpp  Stand.hpp
src/Main/: .Main.cpp.swp  Main.cpp
src/Match/: Match.cpp  Match.hpp  MatchEngine.cpp  MatchEngine.hpp  MatchEnterPitch.cpp  MatchEnterPitch.h  MatchFactory.cpp  MatchFactory.hpp  MatchState.cpp  MatchState.h
src/Pitch/: .MiniMap.cpp.swp  MiniMap.cpp  MiniMap.hpp  MiniMapSprite.cpp  MiniMapSprite.h  Pitch.cpp  Pitch.hpp  PitchDefines.hpp  PitchSprite.cpp  PitchSprite.hpp  PitchTypes.hpp
src/Player/: .Player.cpp.swp  Player.cpp  Player.hpp  PlayerAnimations.hpp  PlayerFactory.cpp  PlayerFactory.hpp  PlayerSprite.cpp  PlayerSprite.hpp  PlayerState.cpp  PlayerState.hpp  PlayerStateDribble.cpp  PlayerStateDribble.hpp  PlayerStateRun.cpp  PlayerStateRun.hpp  PlayerStateStand.cpp  PlayerStateStand.hpp  PlayerTypes.hpp
src/Team/: .PositionCenterBack.hpp.swp  .PositionCenterForward.cpp.swp  .Team.cpp.swp  Gameplan.cpp  Gameplan.hpp  KitFactory.cpp  KitFactory.hpp  PlayingPosition.cpp  PlayingPosition.hpp  PositionCenterBack.cpp  PositionCenterBack.hpp  PositionCenterForward.cpp  PositionCenterForward.hpp  PositionCenterMidfielder.cpp  PositionCenterMidfielder.hpp  PositionDefender.hpp  PositionFactory.cpp  PositionFactory.h  PositionForward.hpp  PositionFullBack.cpp  PositionFullBack.hpp  PositionMidfielder.cpp  PositionMidfielder.hpp  PositionRightMidfielder.cpp  PositionRightMidfielder.hpp  PositionWideMidfielder.cpp  PositionWideMidfielder.hpp  Team.cpp  Team.hpp  TeamFactory.cpp  TeamFactory.hpp
src/ball/: ball.cpp  ball.hpp  ball_movable.cpp  ball_movable.hpp  ball_sprite.cpp  ball_sprite.hpp
src/imgui/: imconfig.h  imgui-SFML.cpp  imgui.cpp
src/player/: player.cpp  player.hpp  player_animations.h  player_movable.cpp  player_movable.hpp  player_statics.hpp
